exports[`Private Reducer should have a default state 1`] = `
Object {
  "showingContextMenu": false,
  "showingCountModal": false,
}
`;

exports[`Private Reducer should toggle context menu 1`] = `
Object {
  "showingContextMenu": true,
  "showingCountModal": false,
}
`;

exports[`Private Reducer should toggle count menu 1`] = `
Object {
  "showingContextMenu": false,
  "showingCountModal": true,
}
`;
